--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    Пожалуйсто пару дней на даработку а то не успеваю!!
+    Пожалуйсто пару дней на даработку а то не успеваю!
     <header class="header section__black">
         <div class="container">
             <div class="header__nav">
